User added to test

--- a/Yarp-microservices-example/appsettings.json
+++ b/Yarp-microservices-example/appsettings.json
@@ -10,7 +10,6 @@
     "Routes": {
       "user-route": {
         "ClusterId": "user-cluster",
-        "AuthorizationPolicy": "authenticated",
         "Match": {
           "Path": "/user/{**catch-all}"
         },
@@ -28,7 +27,7 @@
       "user-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "https://localhost:5201/"
+            "Address": "http://localhost:5200/"
           }
         }
       },
