Update token validation

--- a/Yarp-microservices-example/appsettings.json
+++ b/Yarp-microservices-example/appsettings.json
@@ -6,10 +6,17 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "my_issuer",
+    "Audience": "my_audience",
+    "SecretKey": "my_super_long_super_secure_key_that_is_not_expected"
+  },
   "ReverseProxy": {
     "Routes": {
       "user-route": {
         "ClusterId": "user-cluster",
+        "RateLimiterPolicy": "fixedIdentity",
+        "AuthorizationPolicy": "authenticated",
         "Match": {
           "Path": "/user/{**catch-all}"
         },
