Create new service to assign blog posts to authenticated users.

--- a/Yarp-microservices-example/appsettings.json
+++ b/Yarp-microservices-example/appsettings.json
@@ -15,7 +15,7 @@
     "Routes": {
       "user-route": {
         "ClusterId": "user-cluster",
-        "RateLimiterPolicy": "fixedIdentity",
+        "RateLimiterPolicy": "byIP",
         "AuthorizationPolicy": "authenticated",
         "Match": {
           "Path": "/user/{**catch-all}"
