Login and register

--- a/Blog-microservices-example/Blog-microservices-example.csproj
+++ b/Blog-microservices-example/Blog-microservices-example.csproj
@@ -14,4 +14,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
+    </ItemGroup>
+
 </Project>
