--- a/User-microservices-example/appsettings.json
+++ b/User-microservices-example/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "conn": "Host=localhost;Port=5432;Database=userDatabase;Username=myuser;Password=mypassword;"
+  },
+  "JwtSettings": {
+    "Issuer": "my_issuer",
+    "Audience": "my_audience",
+    "SecretKey": "my_super_long_super_secure_key_that_is_not_expected"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
