Refactor user and Yarp

--- a/Yarp-microservices-example/appsettings.json
+++ b/Yarp-microservices-example/appsettings.json
@@ -22,10 +22,10 @@
         },
         "Transforms": [{ "PathPattern": "{**catch-all}" }]
       },
-      "products-route": {
-        "ClusterId": "products-cluster",
+      "blog-route": {
+        "ClusterId": "blog-cluster",
         "Match": {
-          "Path": "/products/{**catch-all}"
+          "Path": "/blog/{**catch-all}"
         },
         "Transforms": [{ "PathPattern": "{**catch-all}" }]
       }
@@ -38,7 +38,7 @@
           }
         }
       },
-      "products-cluster": {
+      "blog-cluster": {
         "Destinations": {
           "destination1": {
             "Address": "https://localhost:5101/"
